# Azrael

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bake.py
src/: lib.rs
src/azrael/: __init__.py  _core.pyi  _corpus_registry.py  _query.py
tests/: conftest.py  test_corpus_registry.py  test_query.py
