[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "azrael"
version = "1.0.0"
description = "Mythology encyclopedia — gods, creatures, heroes, places, items, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Andrew Watts", email = "andrewkwatts@gmail.com"},
]
keywords = ["mythology", "gods", "encyclopedia", "folklore", "creatures", "heroes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "eyecore>=1.0.0",
]

[project.optional-dependencies]
bake = [
    "requests>=2.28",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/andrewkwatts-maker/Azrael"
Repository = "https://github.com/andrewkwatts-maker/Azrael"
Issues = "https://github.com/andrewkwatts-maker/Azrael/issues"

[tool.maturin]
python-source = "src"
module-name = "azrael._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
